change post message response to camel case
